// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPickerBody should be rendered with maximum props 1`] = `
[
  <div
    className="searchWrapper"
  >
    <div
      className=""
      style={
        {
          "alignSelf": undefined,
          "flexBasis": "0",
          "flexGrow": 1,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="container uui-input-box -clickable root size-48 mode-form"
        onFocus={[Function]}
        tabIndex={-1}
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
        <input
          aria-invalid={false}
          className="uui-input"
          inputMode="search"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="Search"
          tabIndex={0}
          type="search"
          value=""
        />
      </div>
    </div>
  </div>,
  <div
    className="uui-flex-row root size-36 body modal undefined container align-items-center"
    style={
      {
        "columnGap": undefined,
        "maxHeight": 800,
        "maxWidth": undefined,
        "rowGap": undefined,
      }
    }
  >
    <div
      className="root root uui-scroll-bars uui-shadow-top uui-shadow-bottom scrollContainer"
      style={
        {
          "display": "flex",
          "height": "100%",
          "overflow": "hidden",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        style={
          {
            "WebkitOverflowScrolling": "touch",
            "bottom": 0,
            "display": "flex",
            "flex": "1 1 auto",
            "flexDirection": "column",
            "left": 0,
            "marginBottom": 0,
            "marginRight": 0,
            "overflow": "scroll",
            "position": "relative",
            "right": 0,
            "top": 0,
          }
        }
      >
        <div
          className="listContainer"
          style={
            {
              "minHeight": "0px",
            }
          }
        >
          <div
            style={
              {
                "marginTop": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className="container uui-blocker-container root"
        style={
          {
            "minHeight": undefined,
          }
        }
      >
        <div />
      </div>
      <div
        className="uui-track-horizontal"
        style={
          {
            "display": "none",
            "height": 6,
            "position": "absolute",
          }
        }
      >
        <div
          className="uui-thumb-horizontal"
        />
      </div>
      <div
        className="uui-track-vertical"
        style={
          {
            "display": "none",
            "position": "absolute",
            "width": 6,
          }
        }
      >
        <div
          className="uui-thumb-vertical"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`DataPickerBody should be rendered with minimum props 1`] = `
<div
  className="uui-flex-row root size-36 body undefined undefined container align-items-center"
  style={
    {
      "columnGap": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "rowGap": undefined,
    }
  }
>
  <div
    className="no-found-size-36"
    style={
      {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": "center",
      }
    }
  >
    <div
      className="root uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography line-height-18 font-size-14 v-padding-9 container"
    >
      No records found
    </div>
  </div>
</div>
`;

exports[`DataPickerBody should be rendered without rows 1`] = `
<div
  className="uui-flex-row root size-36 body undefined undefined container align-items-center"
  style={
    {
      "columnGap": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "rowGap": undefined,
    }
  }
>
  <div>
    Not found
  </div>
</div>
`;
